fix: increase header and footer image heights for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ header {
 }
 
 header img {
-  height: 42px;
+  height: 72px;
 }
 
 header h1 {
@@ -396,7 +396,7 @@ footer {
   }
   
   header img {
-    height: 36px;
+    height: 60px;
   }
   
   nav {
